fix some of the most obvious IE7 layout problems

--- a/gui/war/CoreGUI.css
+++ b/gui/war/CoreGUI.css
@@ -370,7 +370,6 @@ a:link {
 
 .default-button {
     padding:2px 10px 2px 10px;
-    font-family:Arial,Verdana,Bitstream Vera Sans,sans-serif;
     font-size:11px;
     background:#DDDDDD url(images/sc/skins/Enterprise/images/cssButton/button_stretch.png) repeat-x;
     color:#000000;
@@ -633,17 +632,27 @@ a:link {
 
 .toolstrip-button {
 
+    /*
+
+    padding:2px 10px 2px 10px;
+    font-size:11px;
+    background:#DDDDDD url(images/sc/skins/Enterprise/images/cssButton/button_stretch.png) repeat-x;
+    color:#000000;
+    border:1px solid #A6ABB4;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    white-space:nowrap;
+
+    */
     color:#606060!important;
     float: left;
-    line-height: 1.2em;
     margin: 0px 6px;
     outline: none;
-    text-align: left;
     text-decoration: none;
     white-space: nowrap;
     border:1px solid #888;
     background:#DDDDDD url(images/buttons/button_bg.gif) repeat-x;
-    font-size:11px;
+    font-size:10px;
     padding:2px 10px 2px 10px;
     -moz-border-radius: 2px;
     border-radius: 2px;
